k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coconut-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coconut-backend
  template:
    metadata:
      labels:
        app: coconut-backend
    spec:
      # Wait for MySQL to be ready before starting backend pods
      containers:
        - name: backend
          image:  praveen22233/natucoconut-app_backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: coconut-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
