k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coconut-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coconut-frontend
  template:
    metadata:
      labels:
        app: coconut-frontend
    spec:
      containers:
        - name: frontend
          image:  praveen22233/natucoconut-app_frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: coconut-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
